ZMCIntegral/complex/zmccomplex.124989.err
  File "./complex-test.py", line 18
    def f_real(y[0], y[1]):
                ^
SyntaxError: invalid syntax
srun: error: gpu-0-0: task 0: Exited with exit code 1
